# naive-rsa

./: Cargo.toml  README.md
src/: main.rs  mulinv.rs  prime.rs  rsa.rs
